Solved update product issue

--- a/src/main/resources/Bundle_en_EN.properties
+++ b/src/main/resources/Bundle_en_EN.properties
@@ -1,4 +1,14 @@
 Drinks=Drinks
 Food=Food
 Medicine=Medicine
+Products=Products
+Name=Name
+Category=Category
+Stock=Stock
+Edit=Edit
+Delete=Delete
+Price=Price
+Currency=Currency
+Submit=Submit
+
 
